bnlearn (4.8)

  * the rbn() method for bn objects is now deprecated and will be removed by the
     end of 2023.
  * removed choose.direction().
  * implemented gbn2mvnorm(), which converts a Gaussian BN to its multivariate
     normal global distribution, and mvnorm2gbn(), which does the opposite.
  * added the extended BIC from Foygel and Drton.
  * the maximum likelihood estimators in bn.fit() now have distinct labels "mle"
     (discrete BNs), "mle-g" (Gaussian BNs) and "mle-cg" (conditional Gaussian
     BNs) to identify them without ambiguity.
  * graphviz.chart() now supports Gaussian and conditional Gaussian BNs
     (thanks Tom Waddell).
  * the "draw.levels" argument of graphviz.chart() has been renamed to
     "draw.labels".
  * chow.liu(), aracne() and tree.bayes() now handle data with missing values.
  * implemented the hierarchical Dirichlet parameter estimator for related
     data sets from Azzimonti, Corani and Zaffalon.
  * all unidentifiable parameters are now NAs, including those that were NaNs
     before, for consistency across node types.
  * structural.em() now returns descriptive error messages when the data
     contain latent variables (thanks Bernard Liew).
  * implemented the Kullback-Leibler divergence for discrete and Gaussian
     networks.
  * fixed spurious errors in bn.boot() resulting from changes in the
     all.equal() method for functions in R 4.1.0 (thanks Fred Gruber).
  * added a mean() method that averages bn.fit objects with the same network
     structure, with optional weights.
  * bn.boot(), bn.cv() and boot.strength() now handle data with missing values.

bnlearn (4.7)

  * removed the "moral" argument from vstructs() and cpdag().
  * removed the path() alias to path.exists().
  * the "nodes" argument has been removed from averaged.network(), it was not
     meaningfully used anywhere.
  * the choose.direction() function is now deprecated, and it will also be
     removed by the end of 2022.