@@ -2,8 +2,8 @@ Package: bnlearn
 Type: Package
 Title: Bayesian Network Structure Learning, Parameter Learning and
         Inference
-Version: 4.8
-Date: 2022-09-16
+Version: 4.8.1
+Date: 2022-09-20
 Depends: R (>= 3.3.0), methods
 Suggests: parallel, graph, Rgraphviz, igraph, lattice, gRain (>=
         1.3-3), ROCR, Rmpfr, gmp
@@ -25,6 +25,6 @@ URL: https://www.bnlearn.com/
 License: GPL (>= 2)
 LazyData: yes
 NeedsCompilation: yes
-Packaged: 2022-09-16 14:51:06 UTC; fizban
+Packaged: 2022-09-20 15:46:32 UTC; fizban
 Repository: CRAN
-Date/Publication: 2022-09-19 08:56:10 UTC
+Date/Publication: 2022-09-21 22:50:06 UTC
