@@ -1,5 +1,5 @@
-8792d6feb55557190e556bab3bf0ee0b *Changelog
-1a341d60cb402ce7c7a53071c06ee288 *DESCRIPTION
+f50abf883ad1f8914e58843a0d8efb82 *Changelog
+f07f996d942416a74b271d8622caf45b *DESCRIPTION
 0b8d64a0cc816dc7d42a4067d6ee4427 *NAMESPACE
 272688df46b253db4cea4bc70a3703ad *R/aracne.R
 9b9bff177487557e5b4df49826849d32 *R/arc.operations.R
@@ -194,7 +194,7 @@ e578f2ac2055f409124c07f46a3e9f3b *man/structural.em.Rd
 0133f3186b8a774001abcc68c8b79ceb *man/structure.learning.Rd
 25586396ee326c88477d4620351364a8 *man/test.counter.Rd
 d5187ff4935a55fd7b3f336827883e9d *man/whitelists.and.blacklists.Rd
-33c2fd8154b2435916cc6bd37d23afae *src/Makevars
+e12bd3aa6417b9900a7921b3a0af4bae *src/Makevars
 72efcbd066e5342fda216009cae038a2 *src/arcs/arcs2amat.c
 a8432dec80849be5e173da78b6c8f304 *src/arcs/arcs2elist.c
 1f07ce9eff2595d101be484df0191aaf *src/arcs/bind.c
@@ -206,7 +206,7 @@ b06b67b13d20bc86abc987bc9485ba7a *src/arcs/is.row.equal.c
 18f6e15ee984e3e2ffc3880e98061d2c *src/bnlearn/cache.structure.c
 a15f21f5898e3c3e64b388a8cc5461c1 *src/bnlearn/cextend.c
 aaef7da6ad420ecf454c3d7b2d3bbd17 *src/bnlearn/colliders.c
-025db2f5eba6271d3397320fb7001529 *src/bnlearn/cpdag.c
+55c60d54a9019c55621f0a21ae82aa28 *src/bnlearn/cpdag.c
 f93b5755b4538052eaa5d762560731f4 *src/bnlearn/fitted.c
 12a41ad4a54c8e5c2b85ec6b046faae0 *src/bnlearn/nparams.c
 445293b01646e4b83e75e400d9687454 *src/bnlearn/shd.c
@@ -220,13 +220,13 @@ f0d90bc58a1f9206380e6f63a289fcbd *src/core/contingency.tables.c
 365bb9a410e6a8e87933931039704dec *src/core/covariance.matrix.h
 43b22ef87babc8f5e7491eb0e2b999af *src/core/data.table.c
 c5d15579a8a3c95c69a461bf633e5509 *src/core/data.table.h
-bc2ef7089a74e8e652f4b852d76885ad *src/core/math.functions.c
-6ef73f9fed5a1a26647f7ca13450b017 *src/core/math.functions.h
+a5b7aa69d4964fd4f9d5a245418b1090 *src/core/math.functions.c
+50c4d8af98aa861d55c51dccbaae0409 *src/core/math.functions.h
 95a1021044e6ebab32e1c94b47434364 *src/core/moments.c
 7fe6077472bbbeaf249afd3d0158fb12 *src/core/moments.h
-bd84734c17613edad2c62efa25101a05 *src/core/sampling.c
+d96637beb91b51057b2c8c5ab69ce64a *src/core/sampling.c
 56930e2c3ac644045984a2dcf6f7fa9a *src/core/sampling.h
-ef6b3d4b7e20d2dbd86012a9f57a659d *src/core/sets.c
+1723647639ce74522c33c2e300d96404 *src/core/sets.c
 52271c571d8f0e67adf128a4354d0065 *src/core/sets.h
 7da02a73363b65ca98346f2064486f87 *src/core/uppertriangular.c
 252e98286f5b837ca8ccd88f25c9ae0c *src/core/uppertriangular.h
@@ -236,16 +236,16 @@ c2b53d044a88f74bd6bcf9a46cc1e3df *src/fitted/fitted.h
 d4878477012ec72b388a345768bc0707 *src/globals.c
 39d5c790a1478269bd8b383728e1b895 *src/graphs/acyclic.c
 8ed26e5ef19f19a44868d94aff4ecd22 *src/graphs/is.dag.c
-6017ec1a2be2f27622d3e74d64c8d895 *src/graphs/path.c
+d8e815cb3b8fe6fef4a724c1356fd144 *src/graphs/path.c
 f3f0dd8bfb5ab2d2f9405b40c37d2729 *src/graphs/pdag2dag.c
 0a2821cd5831933d83b17fab972cfcb4 *src/graphs/random/graph.generation.c
 ba1b2346003cd16b9163ce8e7c86e9bb *src/graphs/topological.ordering.c
 5bc4ac9ec3b7b5a8332c0e47f81de474 *src/include/bn.h
 77bb0cdb1112bbbee282f7b41520e7b3 *src/include/globals.h
-d9a0b4cb1f04c595bd13369802cc79da *src/include/graph.h
+b7fafb8bb198bb9f029fa89fea612ca3 *src/include/graph.h
 f46430b13f531e945f8dcd01333958ac *src/include/learning.h
-65609184a28afe143debb3af04919cf8 *src/include/rcore.h
-221b026eefee72fb21638c7f0058d302 *src/include/register.h
+2f9e80f2538ff91d962e0cfc2eee4096 *src/include/rcore.h
+0d886f3ce8f444480f2399d16c472704 *src/include/register.h
 262304f2ea1de595a82b54531f797d38 *src/include/sampling.h
 aaa6f5b42845b4302f5f7ff7ff74815a *src/inference/cpdist.c
 b6d765eeb680e28c6c7a09ea503f871d *src/inference/kullback.leibler.c
@@ -259,7 +259,7 @@ fd825c04c7733b8ff7f129f9b1d3a0be *src/learning/local/mi.matrix.c
 65054dfb94e475ec92abb338371f99e9 *src/learning/score/hc.cache.lookup.c
 f0f07d1a3c1e8d8bdff2df9dfa1d663b *src/learning/score/score.delta.c
 e4a191fc783d7a8b7cc5a5fa5fc562eb *src/learning/score/tabu.c
-15a038a9f1feaa2403b96cd2e538e3a3 *src/math/conditional.least.squares.c
+f8e032d05ff9029c4a78ad121c1bf1a9 *src/math/conditional.least.squares.c
 ba868e716fdb459e72fa282b62fff090 *src/math/least.squares.c
 7efe13b6a417674d43f0bcdfa40cb22e *src/math/linear.algebra.c
 ad0d751d8b8945594b47ecd6fbb86b1e *src/math/linear.algebra.h
@@ -269,13 +269,13 @@ d70ddd0b59bde51d0ec324b4e05e1ed1 *src/minimal/data.frame.c
 4b6a6d84f63b9d37a35fc8ae4fc81e4c *src/minimal/data.frame.h
 278b7219a13d23947df1357c7148943b *src/minimal/strings.c
 877994bd70ba8746b22f549566b63432 *src/minimal/strings.h
-be077c93fdde396422298cf319fe929d *src/minimal/table.c
+4849f42d810c4510d31e2560da73c27c *src/minimal/table.c
 a1ad3d97495e3e5ecea09dc721cf90d5 *src/minimal/table.h
 0c431f6440ab37091773c594db094882 *src/minimal/tiers.c
 3c0d9db95d05063bf97ad97f694e366d *src/minimal/unique.c
 1361f6745323c03c3dbf2dfd996a8dc8 *src/minimal/unique.h
 c4ababea9ed7d088e27c49a5105acddb *src/parameters/discrete/classic_discrete.c
-641bf64fe4a38af0d54b5c60b745a3ff *src/parameters/discrete/hierarchical_dirichlet.c
+190eec0e7eda7a79a1251a34e5d32e4d *src/parameters/discrete/hierarchical_dirichlet.c
 0a6a98686a731ace8a26514ef099dec4 *src/parameters/parameters.h
 74d3bd841a6777e0668b4ec5de2f0083 *src/parameters/rinterface/classic_discrete.c
 a0a8d28ae1e3c1b811f97e200e9e52fa *src/parameters/rinterface/hierarchical_dirichlet.c
@@ -284,11 +284,11 @@ b235fdef55b48e2e0cdff3c6b8fbac19 *src/parameters/rinterface/mixture_ordinary_lea
 fa7b45efae214f1fcef996b95e2acae7 *src/predict/map.lw.c
 c519fa2245aaf0664f59af26046d8b1a *src/predict/predict.c
 ea47e140d46bf96a9de4194fac1377a1 *src/preprocessing/dedup.c
-0d13ab9482bfdacec4535d5b149b993b *src/preprocessing/discretize.c
+ce4f2e3629b1eeae8c136f5e9cca94ce *src/preprocessing/discretize.c
 d101f147b36afe0c634ad84ca481adb6 *src/preprocessing/enums.c
 a3e54cbd08a42090d965b942318e48b2 *src/preprocessing/preprocessing.h
 b69fc1624d03d7c4b9c852da8065ee58 *src/sanitization/cg.assumptions.c
-69eb52a4678ad19cacc09b37b8de7d5a *src/sanitization/covariance.c
+e24231dcca0d928f903c992b229b95cb *src/sanitization/covariance.c
 754abdf57f107d7f61f416527d1c378d *src/sanitization/data.c
 df715a295cc96918e3baf53f7446cbb4 *src/scores/alpha.star.c
 af88e20528c8f38d3d27a9b748a4c3de *src/scores/cg.loglikelihood.c
@@ -319,11 +319,11 @@ c0a1805839a4e52b610fb7050cd742ab *src/tests/gaussian/df.adjust.c
 54b4a9e3febeb4eb40093b70d85cce85 *src/tests/gaussian/gaussian.tests.c
 ad5922b3c2137c491e909f08b68ab850 *src/tests/gaussian/shrinkage.c
 700611885249881277dca4750e841f99 *src/tests/patterns.h
-42e415c3af9c77ccbb24c63641d52caf *src/tests/patterns/allsubs.test.c
+dab2da2a9623cc5e64ff9a2d7f6707c2 *src/tests/patterns/allsubs.test.c
 ab5da304cbeaabaf14ac5e6a03676e89 *src/tests/patterns/ctest.c
-fd0d1684bdcf9a874cd03088e03b38d6 *src/tests/patterns/roundrobin.test.c
+e32bd5bf646da45d672f4e20deb8d351 *src/tests/patterns/roundrobin.test.c
 f3b7108e149ffdbd47ae4ec56d37bc3a *src/tests/patterns/utest.c
-3df79947d531a6239f3e1247fd3adc69 *src/tests/permutation/discrete.monte.carlo.c
+0bc9e7ca22b7e07dc7ee8f5527f4092b *src/tests/permutation/discrete.monte.carlo.c
 55ee2669adfc38dcb68e31919872f606 *src/tests/permutation/gaussian.monte.carlo.c
 44cf647997fcc38ce0d248a4b1f81833 *src/tests/rinterface/allsubs.test.c
 ad70af148893f78efbc43558e38cd6e0 *src/tests/rinterface/ctest.c
