@@ -1,5 +1,5 @@
 PKG_LIBS = $(LAPACK_LIBS) $(BLAS_LIBS) $(FLIBS)
-# PKG_CFLAGS = -Wall -pedantic -std=c99 -march=native
+# PKG_CFLAGS = -Wall -pedantic -std=c99 -march=native -flto=10 -Wabsolute-value
 
 SOURCES = \
   arcs/arcs2amat.c \
