@@ -4,7 +4,7 @@ extern SEXP all_equal_bn(SEXP, SEXP);
 extern SEXP allsubs_test(SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP);
 extern SEXP alpha_star(SEXP, SEXP, SEXP);
 extern SEXP amat2arcs(SEXP, SEXP);
-extern SEXP aracne(SEXP, SEXP, SEXP, SEXP, SEXP);
+extern SEXP aracne(SEXP, SEXP, SEXP, SEXP, SEXP, SEXP);
 extern SEXP arcs_cg_assumptions(SEXP, SEXP, SEXP);
 extern SEXP arcs_rbind(SEXP, SEXP, SEXP);
 extern SEXP arcs2amat(SEXP, SEXP);
@@ -22,7 +22,7 @@ extern SEXP cg_banned_arcs(SEXP, SEXP);
 extern SEXP cgpred(SEXP, SEXP, SEXP);
 extern SEXP cgsd(SEXP, SEXP, SEXP);
 extern SEXP check_covariance(SEXP);
-extern SEXP chow_liu(SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP);
+extern SEXP chow_liu(SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP, SEXP);
 extern SEXP class_err(SEXP, SEXP);
 extern SEXP classic_discrete_parameters(SEXP, SEXP, SEXP, SEXP, SEXP, SEXP);
 extern SEXP colliders(SEXP, SEXP, SEXP, SEXP, SEXP, SEXP);
